--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -8,7 +8,7 @@
 <%= link_to('<< Back to List', {:action => 'list'}, :class => 'back-link') %>
 
 <div class='subject show'>
-	<h2>Show Subject<h2>
+	<h2>Show Subject</h2>
 	<table summary='Subject detail view'>
 		<tr>
 			<th>Name</th>
@@ -17,6 +17,10 @@
 		<tr>
 			<th>Position</th>
 			<td><%= @subject.position %></td>
+		</tr>
+		<tr>
+			<th>Pages</th>
+			<td><%= link_to(@subject.pages.size, {:controller => 'pages', :action => 'list'}) %></td>
 		</tr>
 		<tr>
 			<th>Visible?</th>
