--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -1,5 +1,18 @@
 * { margin: 0; padding: 0; }
 html { height: 100%; width: 100%; }
+
+.center { text-align: center; }
+span.status {display: block; width: 10px; height: 10px; margin: 0.25em auto; padding: 0; border: 1px solid #000000; }
+span.status.true { background: green; color: green; }
+span.status.false { background: red; color: red; }
+tr.odd { background-color: #C0B9A2; }
+tr.even { background-color: #E0CB8A; }
+a.action { background-color: #F7A670; border-radius: 3px; text-decoration: none; }
+a.action.new { border: solid 1px #837267; background-color: #F7A670; padding: 2px 10px; border-radius: 10px; }
+
+body div#main div#content div.subject div.scrap { float: left; width: 330px; }
+body div#main div#content div.page div.scrap { float: left; width: 355px; }
+
 body { 
 	width: 100%; 
 	min-width: 980px;
@@ -38,42 +51,94 @@ body {
 					height: 260px;
 					margin: 0 auto;
 					padding-top: 50px;}
-
-				body div#main div#content div.subject h2 {
-					color: #44201D;
-					font-size: 30px;
-					text-align: center;
-					margin-bottom: 20px;
-					font-weight: bold;}
-				body div#main div#content div.subject.show table {
-					margin: 0 auto;}
-				body div#main div#content div.subject.list a.action.new {
-					text-decoration: none;
-					color: #6D370F;
-					font-size: 18px;
-					font-weight: 900;}
-					body div#main div#content div.subject.list table tr th:nth-child(2) {
-						width: auto;}
-					body div#main div#content div.subject.list table tr th:nth-child(5) {
-						width: auto;}
-					body div#main div#content div.subject table tr th {
-						width: 80px;
-						text-align: left;
-						padding: 5px;
-						font-size: 20px;
-						color: #2B1C11}
-					body div#main div#content div.subject table tr td input {
-						text-align: left;
-						padding: 3px 10px;
+					body div#main div#content div.subject h2 {
+						color: #44201D;
+						font-size: 30px;
+						text-align: center;
+						margin-bottom: 20px;
+						font-weight: bold;}
+					body div#main div#content div.subject.show table {
+						margin: 0 auto;}
+					body div#main div#content div.subject.list a.action.new {
+						text-decoration: none;
+						color: #6D370F;
 						font-size: 18px;
-						color: #2B1C11;
-						font-weight: bold;
-						border-radius: 5px;}
-						body div#main div#content div.subject table tr td input[type='checkbox'] {
-							width: 23px;
-							height: 23px;}
+						font-weight: 900;}
+						body div#main div#content div.subject.list table tr th:nth-child(2) {
+							width: auto;}
+						body div#main div#content div.subject.list table tr th:nth-child(5) {
+							width: auto;}
+						body div#main div#content div.subject table tr th {
+							width: 80px;
+							text-align: left;
+							padding: 5px;
+							font-size: 20px;
+							color: #2B1C11}
+						body div#main div#content div.subject table tr td input {
+							text-align: left;
+							padding: 3px 10px;
+							font-size: 18px;
+							color: #2B1C11;
+							font-weight: bold;
+							border-radius: 5px;}
+							body div#main div#content div.subject table tr td input[type='checkbox'] {
+								width: 23px;
+								height: 23px;}
 
 				body div#main div#content div.subject div.form-buttons input {
+					float: right;
+					margin-right: 40px;
+					font-size: 18px;
+					padding: 5px 15px;
+					border-radius: 15px;
+					color: #2B1C11;
+					font-weight: bold;
+					background-color: transparent;}
+
+
+
+				body div#main div#content div.page {
+					max-width: 500px;
+					height: 260px;
+					margin: 0 auto;
+					padding-top: 50px;}
+					body div#main div#content div.page h2 {
+						color: #44201D;
+						font-size: 30px;
+						text-align: center;
+						margin-bottom: 20px;
+						font-weight: bold;}
+					body div#main div#content div.page.show table {
+						margin: 0 auto;}
+					body div#main div#content div.page.list a.action.new {
+						text-decoration: none;
+						color: #6D370F;
+						font-size: 18px;
+						font-weight: 900;}
+						body div#main div#content div.page.list table tr th {
+							width: auto;}
+							body div#main div#content div.page.list table tr th:first-child {
+								width: 15px;}
+							body div#main div#content div.page.list table tr th:nth-child(6) {
+								width: auto;}
+						body div#main div#content div.page table tr th {
+							width: 80px;
+							text-align: left;
+							padding: 5px;
+							font-size: 20px;
+							color: #2B1C11}
+						body div#main div#content div.page table tr td input {
+							text-align: left;
+							padding: 3px 10px;
+							font-size: 18px;
+							color: #2B1C11;
+							font-weight: bold;
+							border-radius: 5px;}
+							body div#main div#content div.page table tr td input[type='checkbox'] {
+								width: 23px;
+								height: 23px;}
+
+				body div#main div#content div.page div.form-buttons input {
 					float: right;
 					margin-right: 40px;
 					font-size: 18px;
@@ -93,4 +158,3 @@ body {
 			font-size: 15px;
 			font-weight: bold;}
 
-.center { text-align: center; }
