--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,10 +1,5 @@
 <% @page_title = "Display Page: #{@page.name}" %>
 
-<% if !flash[:notice].blank? %>
-	<div class='notice'>
-		<%= flash[:notice] %>
-	</div>
-<% end %>
 <%= link_to('<< Back to List', {:action => 'list'}, :class => 'back-link') %>
 
 <div class='page show'>
@@ -19,16 +14,26 @@
 			<td><%= @page.position %></td>
 		</tr>
 		<tr>
-			<th>Subject</th>
-			<td><%= @page.subject.name %></td>
+			<th>Permalink</th>
+			<td><%= @page.permalink %></td>
 		</tr>
 		<tr>
-			<th>Visible?</th>
-			<td><%= @page.visible ? 'true' : 'false' %></td>
+			<th>Subject</th>
+			<td>
+				<% if @page.subject.nil? %>
+					&nbsp;
+				<% else %>
+					<%= @page.subject.name %>
+				<% end %>
+			</td>
 		</tr>
 		<tr>
 			<th>Sections</th>
 			<td><%= @page.sections.size %></td>
+		</tr>
+		<tr>
+			<th>Visible?</th>
+			<td><%= @page.visible ? 'Yes' : 'No' %></td>
 		</tr>
 		<tr>
 			<th>Created</th>
