admin user controller created

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,18 +1,24 @@
+<%= render(:partial => 'shared/error_messages', :locals => {:object => @page}) %>
+
 <table summary='Page form fields'>
 	<tr>
-		<th>Name</th>
+		<th><%= f.label(:subject_id, "Subject Id") %></th>
+		<td><%= f.select(:subject_id, @subject_id_array) %></td>
+	</tr>
+	<tr>
+		<th><%= f.label(:name) %></th>
 		<td><%= f.text_field(:name) %></td>
 	</tr>
 	<tr>
-		<th>Position</th>
-		<td><%= f.text_field(:position) %></td>
+		<th><%= f.label(:position) %></th>
+		<td><%= f.select(:position, 1..@page_count) %></td>
 	</tr>
 	<tr>
-		<th>Permalink</th>
+		<th><%= f.label(:permalink) %></th>
 		<td><%= f.text_field(:permalink) %></td>
 	</tr>
 	<tr>
-		<th>Visible</th>
+		<th><%= f.label(:visible) %></th>
 		<td><%= f.check_box(:visible) %></td>
 	</tr>
 </table>
