--- a/app/views/sections/list.html.erb
+++ b/app/views/sections/list.html.erb
@@ -1,41 +1,53 @@
-<% @page_title = "Pages List" %>
+<% @page_title = "Sections List" %>
 
 
-<div class='page list'>
-	<h2>Pages</h2>
+<div class='section list'>
+	<h2>Sections</h2>
 
-	<div class='scrap'><%= pluralize(@pages.size, 'page') %> found</div>
+	<div class='scrap'><%= pluralize(@sections.size, 'section') %> found</div>
 
-	<%= link_to("Add New Page", {:action => 'new'}, :class => 'action new') %>
+	<%= link_to("Add New Section", {:action => 'new'}, :class => 'action new') %>
 
-	<table class='listing' summary='page list'>
+	<table class='listing' summary='section list'>
 		<tr class='header'>
 			<th>&nbsp;</th>
 			<!-- <th>Subject</th> -->
+			<th>Name</th>
+			<th>Subject</th>
 			<th>Page</th>
-			<th>Permalink</th>
-			<th>Sections</th>
+			<th>Content Type</th>
+			<th>Content</th>
 			<th>Visible</th>
 			<th>Actions</th>
 		</tr>
-		<% @pages.each do |page| %>
+		<% @sections.each do |section| %>
 		<tr class="<%= cycle('odd', 'even') %>">
-			<td><%= page.position %></td>
-			<!-- <td>
-				<% if page.subject.nil? %>
-					<%= 'Not yet' %>
-				<% else %>
-					<%= link_to(page.subject.name, {:controller => 'subjects', :action => 'show', :id => page.subject.id}) %>
+			<td><%= section.position %></td>
+			<td><%= section.name %></td>
+			<td>
+				<% if section.page.nil? %>
+					&nbsp;
+				<% else if section.page.subject.nil? %>
+						&nbsp;
+					<% else %>
+						<%= link_to(section.page.subject.name, {:controller => 'subjects', :action => 'show', :id => section.page.subject.id}) %>
+					<% end %>
 				<% end %>
-			</td> -->
-			<td><%= page.name %></td>
-			<td><%= page.permalink %></td>
-			<td><%= page.sections.size %></td>
-			<td class='center'><%= status_tag(page.visible) %></td>
+			</td>
+			<td>
+				<% if section.page.nil? %>
+					&nbsp;
+				<% else %>
+					<%= link_to(section.page.name, {:controller => 'pages', :action => 'show', :id => section.page.id}) %>
+				<% end %>
+			</td>
+			<td><%= section.content_type %></td>
+			<td><%= truncate(section.content) %></td>
+			<td class='center'><%= status_tag(section.visible) %></td>
 			<td class='actions'>
-				<%= link_to('Show', {:action => 'show', :id => page.id}, :class => 'action show') %>
-				<%= link_to('Edit', {:action => 'edit', :id => page.id}, :class => 'action edit') %>
-				<%= link_to('Delete', {:action => 'delete', :id => page.id}, :class => 'action delete') %>
+				<%= link_to('Show', {:action => 'show', :id => section.id}, :class => 'action show') %>
+				<%= link_to('Edit', {:action => 'edit', :id => section.id}, :class => 'action edit') %>
+				<%= link_to('Delete', {:action => 'delete', :id => section.id}, :class => 'action delete') %>
 			</td>
 		</tr>
 		<% end %>
