--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -9,9 +9,26 @@ tr.odd { background-color: #C0B9A2; }
 tr.even { background-color: #E0CB8A; }
 a.action { background-color: #F7A670; border-radius: 3px; text-decoration: none; }
 a.action.new { border: solid 1px #837267; background-color: #F7A670; padding: 2px 10px; border-radius: 10px; }
+table { margin: 0 auto; }
 
 body div#main div#content div.subject div.scrap { float: left; width: 330px; }
 body div#main div#content div.page div.scrap { float: left; width: 355px; }
+body div#main div#content div.section div.scrap { float: left; width: 745px; }
+body div#errorExplanation { 
+	border: solid 2px #CA3D3D; }
+	body div#errorExplanation h2 { 
+		font-size: 18px !important;
+		background-color: #CA3D3D !important;
+		color: white !important;
+		margin-bottom: 5px !important;
+		padding: 3px !important; }
+	body div#errorExplanation h2 { 
+		padding: 2px; }
+	body div#errorExplanation ul li { 
+		margin-left: 30px; }
+
+div.field_with_errors label {
+	color: red; }
 
 body { 
 	width: 100%; 
@@ -48,7 +65,6 @@ body {
 
 				body div#main div#content div.subject {
 					max-width: 500px;
-					height: 260px;
 					margin: 0 auto;
 					padding-top: 50px;}
 					body div#main div#content div.subject h2 {
@@ -99,7 +115,6 @@ body {
 
 				body div#main div#content div.page {
 					max-width: 500px;
-					height: 260px;
 					margin: 0 auto;
 					padding-top: 50px;}
 					body div#main div#content div.page h2 {
@@ -146,6 +161,67 @@ body {
 					border-radius: 15px;
 					color: #2B1C11;
 					font-weight: bold;
+					background-color: transparent;}
+
+				body div#main div#content div.section {
+					max-width: 900px;
+					margin: 0 auto;
+					padding-top: 50px;}
+					body div#main div#content div.section h2 {
+						color: #44201D;
+						font-size: 30px;
+						text-align: center;
+						margin-bottom: 20px;
+						font-weight: bold;}
+					body div#main div#content div.section.show table {
+						margin: 0 auto;}
+					body div#main div#content div.section.list a.action.new {
+						text-decoration: none;
+						color: #6D370F;
+						font-size: 18px;
+						font-weight: 900;}
+						body div#main div#content div.section.list table {
+							width: 100%; }
+							body div#main div#content div.section.list table tr th {
+								width: auto;}
+								body div#main div#content div.section.list table tr th:first-child {
+									width: 15px;}
+								body div#main div#content div.section.list table tr th:nth-child(6) {
+									width: auto;}
+							body div#main div#content div.section table tr th {
+								width: 150px;
+								text-align: left;
+								padding: 5px;
+								font-size: 18px;
+								color: #2B1C11}
+							body div#main div#content div.section table tr td input {
+								text-align: left;
+								padding: 3px 10px;
+								font-size: 18px;
+								color: #2B1C11;
+								font-weight: bold;
+								border-radius: 5px;}
+								body div#main div#content div.section table tr td input[type='checkbox'] {
+									width: 23px;
+									height: 23px;}
+
+							body div#main div#content div.section table tr td textarea#section_content {
+								text-align: left;
+								padding: 3px 10px;
+								font-size: 18px;
+								color: #2B1C11;
+								font-weight: bold;
+								resize: none;
+								border-radius: 5px;}
+
+				body div#main div#content div.section div.form-buttons input {
+					float: right;
+					font-size: 18px;
+					padding: 5px 15px;
+					border-radius: 15px;
+					color: #2B1C11;
+					font-weight: bold;
+					margin-right: 187px;
 					background-color: transparent;}
 
 	body div#footer {
