public controller added

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -13,6 +13,7 @@
 
 	<div id='main'>
 		<div id='navigation'>
+			<%= render(:partial => 'layouts/navigation', :locals => {:subjects => @subjects}) %>
 		</div>
 		<% if !flash[:notice].blank? %>
 			<div class='notice'>
