--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = "Display Section: #{@section.name}" %>
 
-<%= link_to('<< Back to List', {:action => 'list'}, :class => 'back-link') %>
+<%= link_to('<< Back to List', {:action => 'list', :page_id => @page.id}, :class => 'back-link') %>
 
 <div class='section show'>
 	<h2>Show Section</h2>
